trunk/Archive2/4e/f6659b695817c7/output
main.cpp:1:1: error: 'string' in namespace 'std' does not name a type
 std::string BotHelper::to_string(int number) {
 ^
